--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,12 +3,11 @@
   <head>
     <title>beaver++</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <!-- <link rel="stylesheet" href='/stylesheets/slashscreen.css'> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel='shortcut icon' type='image/png' href='/images/modifiedbeaver.png' />
+    <link rel='shortcut icon' type='image/png' href='/images/modifiedbeaver.png'>
   </head>
 
-  <body>
+<body>
     {{> navbar}}
 
 
@@ -43,6 +42,6 @@
   <script src="/scripts/sortby.js"></script>
   <script src="/scripts/staritem.js"></script>
 
- </h1>
+
   </body>
 </html>
