--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -1,10 +1,9 @@
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
--->
+
 
   <div class="product" data-toggle="modal" data-target="#{{itemname}}">
-    <img id=forsale src="/uploads/{{picture}}" />
+    <div class="pictureinbox">
+      <img id='forsale' src="/uploads/{{picture}}" />
+    </div>
     <div class='contentinbox'>
       <p align="left" id="productcontent" >{{itemname}}</p>
       <p align="right" id="productcontent3">${{price}}</p>
@@ -36,40 +35,10 @@
           </div>
         </div>
         <div style="display:none" class='id' id="{{id}}"></div>
-<!-- 
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
- -->
+
       </div>
       
     </div>
   </div>
   
-<!-- </div> -->
 
-
-<!-- <div class="product">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <div>
-    <a id="productcontent" href="#{{itemname}}"> {{itemname}}</a>
-    <img src="/uploads/{{picture}}" />
-
-  </div>
-
-  <div id="{{itemname}}" class="overlay">
-    <div class="popup">
-      <div class='blankstar' id='blankstar{{id}}'>&#9734;</div>
-      <h2>{{itemname}}</h2>
-      &#36;&#32; {{price}}
-      <a class="close" href="#">&times;</a>
-      <div class="popupcontent">
-        {{description}}
-        <img src="/uploads/{{picture}}" />
-        <br><br>
-        posted by <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br> ({{user}})
-      </div>
-      <div style="display:none" class='id' id="{{id}}"></div>
-    </div>
-  </div>
-</div> -->
