--- a/views/chat_home.hbs
+++ b/views/chat_home.hbs
@@ -3,9 +3,10 @@
   <head>
     <title>chat</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href='/stylesheets/chat.css'>
+    <script src='/scripts/selectuser.js'></script>
   </head>
   <body>
     {{> navbar}}
@@ -30,5 +31,4 @@
       </div>
     </div>
   </body>
-  <script src='/scripts/selectuser.js'></script>
 </html>
