--- a/views/partials/existing_chat_user.hbs
+++ b/views/partials/existing_chat_user.hbs
@@ -1,3 +1,7 @@
+{{#if particular_notif}}
+<div class='notification' style='position:relative; right: -10px; top: 27px; z-index: 1; background-color: #c2272d; color: white; border-radius: 20px; width: 20px; height: 20px'></div>
+{{/if}}
 <button class='userbutton' type='button' style='padding:10px' onclick="location.href='/chat/{{chatid}}'" id="{{username}}">
   {{firstname}} {{lastname}} ({{username}})
-</button> <br><br><br>
+</button> 
+<br><br><br>
