list item button style

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -28,13 +28,13 @@
                             </select>
 
                             <input id="inserttag" class='inputbox' type='text' placeholder='add tags' name='inserttag'>
-                            <button id="addtag" class="contentbutton" type='button'>add</button><br>
+                            <button id="addtag" class="btn btn-default" type='button'>add</button><br>
                             <div id="tags"></div>
 
                             <input type="file" name="picture" />
 
-                            <button id="submititem" class="contentbutton" type = 'submit' >list it!</button>&#32;
-                            <button type="button" class="contentbutton" data-dismiss="modal">cancel</button><br>
+                            <button id="submititem" class="btn btn-default"type = 'submit' >list it!</button>&#32;
+                            <button type="button" class="btn btn-default" data-dismiss="modal">cancel</button><br>
                             </form>
                         </div>
                         <script src="/scripts/addtag.js"></script>
