added default user image and item image + login fail screen

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -44,7 +44,7 @@
 		
 		<div style = 'position:relative; top:60px' class = 'login'>
 
-
+    {{error}}
 		 	<form name="sign in" method = 'post' action = '/login'>
 		 		<ul>
 		 			<li style = 'position:relative; right: 110px;font-size:17pt''> Email: </li>
