--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -4,6 +4,7 @@
   <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/scripts/login.js" type="text/javascript"></script>
 </head>
 
 
@@ -191,7 +192,7 @@
               <h4 class="modal-title">Login</h4>
             </div>
             <div class="modal-body">
-              <form name="sign in" method = 'post' action = '/login'>
+              <form name="sign in" method = 'post' id="login-form" action = '/login'>
                 <ul>
                   <!-- <li style = 'position:relative; font-size:17pt''> Email: </li> -->
                   <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'Email' name = 'username'> </li>
@@ -203,6 +204,7 @@
 
                   <li><button class="btn btn-default" type = 'submit'>Login</button></li>
 
+                  <li id="login-flash" style="display: none; color: red;">Username or Password incorrect</li>
                 </ul>
               </form>
 
