--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,25 +7,39 @@
 
   <body>
     {{> navbar}}
-    <div id='content'>
-      <h1> {{profilefirstname}} {{profilelastname}} </h1>
+    <div id='profilecontent'>
+      <img id = 'profpic' src="/uploads/{{profpic}}" style='max-width: 250px; max-height: 250px'/>
+      <div id='profilebox'>
+        <h1 id='profilename'> {{profilefirstname}} {{profilelastname}} </h1>
+        Venmo: {{venmo}} <br> 
+        Email: <a href = 'mailto:{{email}}'>{{email}} </a><br><br>
+        <div id='aboutme'>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </div>
+
+<!--       <h1> {{profilefirstname}} {{profilelastname}} </h1>
       <ul style="list-style: none">
         <li>Venmo: {{venmo}}</li>
         <li>
         <a href = 'mailto:{{email}}'> Email: {{email}} </a>
         </li>
         <img id = 'profpic' src="/uploads/{{profpic}}" />
-      </ul>
-      <h1> {{profilefirstname}}&#39;s items</h1>
-      <div id="products">
-        {{#each starred}}
-          {{> starred_item_partial}}
-        {{/each }}
-        {{#each unstarred}}
-          {{> unstarred_item_partial}}
-        {{/each }}
+      </ul> -->
+      <div id="profileitems">
+        <h1> {{profilefirstname}}&#39;s items</h1>
+        <div id="products">
+          {{#each starred}}
+            {{> starred_item_partial}}
+          {{/each }}
+          {{#each unstarred}}
+            {{> unstarred_item_partial}}
+          {{/each }}
+        </div>
       </div>
-    </div>
+
     <script src="/scripts/staritem.js"></script>
   </body>
 </html>
