push down profile page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,7 +7,7 @@
 
   <body>
     {{> navbar}}
-    <div id='content'>
+    <div id='content' style = 'margin-top:100px;'>
       <h1> {{profilefirstname}} {{profilelastname}} </h1>
       <ul style="list-style: none">
         <li>Venmo: {{venmo}}</li>
