--- a/views/deletesuccess.hbs
+++ b/views/deletesuccess.hbs
@@ -10,8 +10,8 @@
     <div id='content'>
       <h1>Success!</h1>
       <p>Your item was deleted.</p>
-      <button class="contentbutton" type="button" onclick="location.href='/manageitems'">return to manager</button>&#32;
-      <button class="contentbutton" type="button" onclick="location.href='/home'">return home</button>
+      <button class="btn btn-default" type="button" onclick="location.href='/manageitems'">return to manager</button>&#32;
+      <button class="btn btn-default" type="button" onclick="location.href='/home'">return home</button>
     </div>
   </body>
 </html>
