favicon/msg changes

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -45,7 +45,7 @@ form button {
   position: absolute;
   left: 50px;
   margin-bottom: 15px;
-  background-color: #A6A6A6;
+  background-color: #fff;
   border: none;
   border-radius: 10px
 }
@@ -54,7 +54,7 @@ form button {
   position: absolute;
   left: 50px;
   margin-bottom: 15px;
-  background-color: #A6A6A6;
+  background-color: #fff;
   border: none;
   border-radius: 10px
 }
@@ -66,7 +66,7 @@ form button {
   right: 175px;
   bottom: 100px;
   width: 405px;
-  max-height: 72%;
+  max-height: 65%;
 }
 
 
@@ -78,10 +78,19 @@ form button {
   word-wrap: break-word;
 }
 
+#msgtitle {
+  text-align: left;
+  position: relative;
+  margin-left: 90px;
+  top: -2px;
+}
+
 #convos {
+  text-align: left;
   position: relative;
   overflow: auto;
-  height: 630px;
+  top: 7px;
+  height: 570px;
   border-radius: 10px;
   background-color: #E1E0E0;
   width: 40%;
@@ -115,4 +124,11 @@ form button {
 #from-other {
   text-align: left;
   background: #F5F5F5;
+}
+
+#receiver {
+  position: absolute;
+  right: 178px;
+  top: 100px;
+  z-index: 1;
 }
