--- a/views/general-chat.hbs
+++ b/views/general-chat.hbs
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>chat</title>
+    <title>Chat</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src='/scripts/general-chat.js'></script>
     <link rel="stylesheet" href='/stylesheets/chat.css'>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
     <h1>{{users}}</h1>
