--- a/views/starred.hbs
+++ b/views/starred.hbs
@@ -3,12 +3,13 @@
   <head>
     <title>Starred Items</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
 
   <body>
     {{> navbar}}
 
-    <div id="content">
+    <div id="content" style='margin-top: 130px'>
       <h1 id="title">{{firstname}}&#39;s starred items </h1>
       <div id="products">
         {{#each starred}}
