--- a/views/userlist.hbs
+++ b/views/userlist.hbs
@@ -5,6 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
   <h1 style='padding:10px'> All Users </h1>
