--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel='shortcut icon' type='image/png' href='/images/modifiedbeaver.png'>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
 
 <body>
