--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
 
 
