--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>Search Results</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
 
   <body>
