--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -4,9 +4,7 @@
     <title>{{ SignUp }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript">
-
-    </script>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
    
   </head>
 
