--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -7,6 +7,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href='/stylesheets/slashscreen.css'>
+        <link rel="icon" type="image/png" href="/images/favicon.png" />
 
     </head>
 <body>
