--- a/views/uploadsuccess.hbs
+++ b/views/uploadsuccess.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>Success</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
 
  <body> 
