--- a/views/home.hbs
+++ b/views/home.hbs
@@ -26,7 +26,7 @@
     
 
 
-    <h1 id = 'typeofsell'> Welcome
+    <div id = 'typeofsell'> Welcome
     <div id="flexbox">
           {{#each starItems}}
             {{> starred_item_partial}}
@@ -35,7 +35,7 @@
             {{> unstarred_item_partial}}
           {{/each }}
     </div>
-    </h1>
+    </div>
        
   
 
