nice about scroll

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -183,7 +183,7 @@
       <ul class="nav navbar-nav navbar-right original">
 
         <li class="nav-item">
-          <a class="nav-link" href="#about">About Us</a>
+          <a class="nav-link" id='scrolltoabout'>About Us</a>
         </li> 
         <li class="nav-item">
           <a data-toggle="modal" data-target="#login">Login</a>
@@ -299,7 +299,7 @@
               
 
       </ul>
-
+      <script src="/scripts/scroll.js" type="text/javascript"></script>
     </div>
 <!--     <div class="collapse navbar-collapse navHeaderCollapse textin">
           <ul class="nav navbar-nav">
