--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -2,11 +2,10 @@
 <!--     <div class="pictureinbox">
       <img id='forsale' src="/uploads/{{picture}}" />
     </div> -->
-       <div class="col-s-6 " style="background-image:url('/uploads/{{picture}}');height:205 px;width:249.5px; background-size: cover; background-position: center; "></div> 
+       <div class="col-s-6 " style="background-image:url('/uploads/{{picture}}');height:205px; width:249.5px; background-size: cover; background-position: center; "></div> 
     <div class='contentinbox'>
-      <p align="left" id="productcontent" >{{itemname}}</p>
+      <p align="left" id="productcontent" >{{itemname}} {{user}}</p>
       <p align="right" id="productcontent3">${{price}}</p>
-      <p align="left" id="productcontent2">{{user}}</p>
 
 
     </div>
