--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,15 +27,15 @@
     
 
 
-    <div id = 'typeofsell'> Welcome
-    <div id="flexbox">
-          {{#each starItems}}
-            {{> starred_item_partial}}
-          {{/each }}
-          {{#each otherItems}}
-            {{> unstarred_item_partial}}
-          {{/each }}
-    </div>
+    <div id = 'typeofsell'> <!-- Welcome -->
+      <div id="flexbox">
+            {{#each starItems}}
+              {{> starred_item_partial}}
+            {{/each }}
+            {{#each otherItems}}
+              {{> unstarred_item_partial}}
+            {{/each }}
+      </div>
     </div>
        
   
