--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -9,7 +9,7 @@
   <body>
     {{> navbar}}
 
-    <div id="content">
+    <div id="content" style='margin-top: 150px'>
       <h1 id="title">Search results for "{{term}}" </h1>
       <div id="products">
         {{#each starred}}
