--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -371,7 +371,45 @@ body.modal-open div.modal-backdrop {
 #signup1:focus {
   outline:none;
 }
+#password {
+    position: absolute center;
+    color: #000;
+    width: 185px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
 
+    margin-top: 20px;
+  /*    margin-left: -85px;*/
+}
+#password:focus {
+  outline:none;
+}
+
+#confirm_password {
+    position: absolute center;
+    color: #000;
+    width: 185px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+
+    margin-top: 20px;
+  /*    margin-left: -85px;*/
+}
+#confirm_password:focus {
+  outline:none;
+}
 
 #login1 {
     position: absolute center;
