--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -341,9 +341,9 @@
                   <!-- <li>Password</li> -->
 
                       <!-- <li><input type="password" style = 'font-size:14pt; padding: 4px; margin:7px' placeholder="Password" name="password" required></li> -->
-                       <li><input class="inputbox" id="signup1" type="password" placeholder="Password" name="password" required></li>
+                       <li><input class="inputbox" id="password" type="password" placeholder="Password" name="password" required></li>
 
-                      <li> <input type='password' style = 'font-size:14pt; padding: 4px; margin:7px' placeholder ="Confirm Password" id = 'password' required></li>
+                      <li> <input type='password' style = 'font-size:14pt; padding: 4px; margin:7px' placeholder ="Confirm Password" id = 'confirm_password' name = 'confirm_password' required><span id='message'></span></li>
                       <!-- <li><input class="inputbox" id="signup1" type="password" placeholder="Confirm Password" name="password" required></li> -->
 
                       <script src="/scripts/confirmpass.js"></script>
@@ -351,7 +351,7 @@
                       <li> <input type = 'file' style = 'font-size:14pt; padding:4px; margin:7px' placeholder = 'Upload photo (optional)' name ='picture'></li>
 
 
-                      <li><input class="twobuttonssign" id="go" type="submit" value="+ +" style="left: 300px;"></li>
+                      <li><input name = 'signupbutton' class="twobuttonssign" id="go" type="submit" value="+ +" style="left: 300px;"></li>
                     </div>
                     </ul>
                   </form>
@@ -361,8 +361,6 @@
                 </div>
               </div>
               </li>
-
-              
 
       </ul>
       <script src="/scripts/scroll.js" type="text/javascript"></script>
