--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,7 @@ body.modal-open div.modal-backdrop {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    /*overflow: auto;*/ /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 5%;
@@ -65,6 +65,7 @@ body.modal-open div.modal-backdrop {
 
 /* Modal Content/Box */
 .modal-content {
+  overflow: auto;
     background-color: #E5E5E5;
     margin: 5px auto; /* 15% from the top and centered */
     border: .5px solid #47474C;
@@ -498,7 +499,7 @@ body.modal-open div.modal-backdrop {
 
 }
 .twobuttonsfog:hover {
-  background-color: #a1282d
+  color: #a1282d
 }
 .signuppage{
     margin-right: 42px;
@@ -531,7 +532,7 @@ body.modal-open div.modal-backdrop {
   background-color: #a1282d
 }
 
-.forgotpass{
+#forgotpass{
     margin-right: 42px;
     margin-top: 120px;
  
