--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -393,6 +393,91 @@ body.modal-open div.modal-backdrop {
   outline:none;
 }
 
+#additem {
+    float:left;
+    color: #000;
+    width: 210px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+    margin-top: 5px;
+    margin-left: 20px;
+  /*    margin-left: -85px;*/
+}
+#additem:focus {
+  outline:none;
+}
+
+.addtags {
+    float:right;
+    color: #000;
+    width: 100px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+    margin-top: 5px;
+    margin-right: 80px;
+  /*    margin-left: -85px;*/
+}
+.addtags:focus {
+  outline:none;
+}
+
+#additemprice {
+    float:right;
+    color: #000;
+    width: 50px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+    margin-top: 5px;
+    margin-right: 20px;
+  /*    margin-left: -85px;*/
+}
+#additemprice:focus {
+  outline:none;
+}
+
+
+
+
+.twobuttonsadditem {
+  border: none;
+    position: absolute;
+    width: 77px;
+    height: 23px;
+    background-color: #C1272D;
+    top: 360px;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    font-family: sans-serif;
+    border-radius: 20px;
+    margin-left: -160px;
+
+}
+.twobuttonsadditem:focus {
+  outline:none;
+
+}
+.twobuttonsadditem:hover {
+  background-color: #a1282d
+}
 
 .twobuttonslog {
   border: none;
@@ -492,6 +577,52 @@ body.modal-open div.modal-backdrop {
 .twobuttonsforgot:hover {
   background-color: #a1282d
 }
+
+.twobuttonsaddtag {
+  border: none;
+    position: absolute;
+    width: 45px;
+    height: 20px;
+    background-color: #C1272D;
+    top: 260px;
+    text-align: center;
+    color: white;
+    font-size: 9px;
+    font-family: sans-serif;
+    border-radius: 20px;
+    margin-left: -10px;
+
+}
+.twobuttonsaddtag:focus {
+  outline:none;
+
+}
+.twobuttonsaddtag:hover {
+  background-color: #a1282d
+}
+
+
+#category{
+    position: left;
+    color: #000;
+    width: 100px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+/*    border-bottom: solid 1px #6C6C6C;*/
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+
+    margin-top: 5px;
+  /*    margin-left: -85px;*/
+}
+
+#category:focus {
+  outline:none;
+}
+
 
 .forgotpass{
     margin-right: 42px;
@@ -893,7 +1024,7 @@ body.modal-open div.modal-backdrop {
   outline: 0;
 }
 
-#description{
+/*#description{
   border: solid 2px #eeeeee;
   border-top: solid 2px #9a9a9a;
   border-left: solid 2px #9a9a9a;
@@ -901,7 +1032,36 @@ body.modal-open div.modal-backdrop {
   padding: 7px;
   border-radius: 7px;
   width:100%;
+}*/
+
+.modal-titlelist{
+  margin-top: 20px;
+  font-size: 20px;
+  color: #C1272D;
 }
+
+#description {
+    position: absolute center;
+    color: #000;
+/*    width: 185px;
+    height: 23px;*/
+/*    top: 125px;*/
+    border: none;
+    border-top: solid 1px #6C6C6C;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+    width:100%;
+    margin-top: 25px;
+  /*    margin-left: -85px;*/
+}
+#description:focus {
+  outline:none;
+}
+
+
 #itemname{
   width: 135px;
   margin-right: 20px;
