--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -32,30 +32,41 @@
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
-
+          <h4 class="modal-titlelist" >LIST AN ITEM</h4>
           <div id="itemform">
             <form method="post" action="/uploaditem" enctype="multipart/form-data">
             
-            <input id="itemname" class='inputbox' type='text' maxlength="15" placeholder='item name' name='itemname' required> 
-            &#36;&#32;<input id='price' class='inputbox' type="number" placeholder='price' name='price' required>
-            <br>
-            <textarea id='description' rows="8" placeholder='description' name='description' cols="50" required></textarea> <br>
+            <li><input class="inputbox" id="additem" type="text" maxlength="15" placeholder="Item Name" name="itemname" ></li>
+            <li><input class="inputbox" id="additemprice" type="text" maxlength="15" placeholder="Price" name="price" ></li>
+
+            <!-- <input id="itemname" class='inputbox' type='text' maxlength="15" placeholder='item name' name='itemname' required>  -->
             
-            <select id='category' name = 'category' required>
+
+            <!-- <input id='price' class='inputbox' type="number" placeholder='price' name='price' required> -->
+            <br>
+
+            <textarea class="inputbox" id='description' rows="6" placeholder='Please write a description of your item here.' name='description' cols="50" required></textarea>
+
+<!--             <textarea id='description' rows="8" placeholder='description' name='description' cols="50" required></textarea> --> <br>
+            
+            <select id='category' class = id='category' name = 'category' required>
               <option value="clothes">Clothes</option>
               <option value="book">Books</option>
               <option value="tech">Tech</option>
               <option value="furniture">Furniture</option>
             </select>
 
-            <input id="inserttag" class='inputbox' type='text' placeholder='add tags' name='inserttag'>
-            <button id="addtag" class="btn btn-default" type='button'>add</button><br>
+            <input id="inserttag" class='addtags' type='text' placeholder='Add Tag' name='inserttag'>
+
+            <li><input class="twobuttonsaddtag" id="addtag" type="submit" value="+ +" style="left: 300px;"></li>
+
+<!--             <button id="addtag" class="btn btn-default" type='button'>add</button><br> -->
             <div id="tags"></div>
 
             <input type="file" name="picture" />
 
-            <button id="submititem" class="btn btn-default"type = 'submit' >list it!</button>&#32;
-            <button type="button" class="btn btn-default" data-dismiss="modal">cancel</button><br>
+            <li><input class="twobuttonsadditem" id="submititem" type="submit" value="+ +" style="left: 300px;"></li>
+
             </form>
         </div>
         <script src="/scripts/addtag.js"></script>
